Updated quick starrt link

--- a/material/overrides/home.html
+++ b/material/overrides/home.html
@@ -14,7 +14,7 @@
         <div class="mdx-hero__content">
           <h1>Data Drivers: Hands-on The Wheel and The Data</h1>
           <p>Get set up in under 5 minutes.</p>
-          <a href="{{ 'f1_2023/' | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
+          <a href="{{ 'f1-2025/' | url }}" title="{{ page.next_page.title | e }}" class="md-button md-button--primary">
             Quick start
           </a>
           <!--
